# spacecorridor

./: .clang-format  .gitignore  Doxyfile.in  Makefile  README.md  infos.txt  meson.build
resources/: app.rc
site/: game_states.dot  index.html  styles.css
src/: constants.h  game.c  game.h  graphics.c  graphics.h  level.c  level.h  main.c  resources.c  resources.h  sdl2-light.c  sdl2-light.h  sdl2-ttf-light.c  sdl2-ttf-light.h  utilities.c  utilities.h
